--- a/styles/styles.css
+++ b/styles/styles.css
@@ -36,6 +36,7 @@ body {
 .navigation-item a:hover {
     transform: scale(1.08);
     color: #ff6b6b;
+    border-bottom: 3px solid #ff6b6b;
 }
 
 
@@ -88,8 +89,6 @@ body {
 }
 
 
-
-
 .about-container h1{
     font-weight: 800;
     font-size: 60px;
@@ -123,6 +122,30 @@ body {
     border-bottom: 3px solid #ff6b6b;
 }
 
+
+
+.project-1 img {
+    object-fit: cover;
+    width: 300px;
+    height: 150px;
+
+}
+
+
+.project-3 img {
+    object-fit: cover;
+    width: 300px;
+    height: 150px;
+
+}
+
+
+.project-2 img {
+    object-fit: cover;
+    width: 300px;
+    height: 150px;
+
+}
 
 
 
@@ -198,6 +221,12 @@ body {
 
 
 
+.footer-contact {
+
+    margin-bottom: 150px;
+}
+
+
 
 .footer-container {
     padding: 40px;
@@ -222,4 +251,94 @@ body {
 .footer-container a {
     text-decoration: none;
     color: #F0E68C;
+}
+
+
+form {
+    width: 500px;
+    height: 510px;
+    padding: 5px;
+    background-color:#1a1a1a ;
+    border-radius: 10px;
+    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5);
+    border-radius: 5px solid #ff6b6b ;
+}
+
+.form-container h1{
+    text-align: center;
+    padding-bottom: 20px;
+    color: #F0E68C; 
+}
+
+
+.form-container {
+    border-top: 3px solid #ff6b6b;
+    padding-top: 20px;
+    margin: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+
+} 
+
+.input-box {
+    padding: 10px;
+}
+
+form label {
+padding: 15px;
+font-size: 20px;
+
+}
+
+.input-box  label {
+    text-align: start;
+    display: block;
+    font-weight: bold;
+}
+   
+
+form input {
+    color: white;
+    width: 100%;
+    padding:12px 12px;
+    background-color: #1a1a1a;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+
+form button {
+
+    font-size: 25px;
+    font-weight: bold;
+    padding: 5px;
+    width: 150px;
+    background-color: #1a1a1a;
+    color: #F0E68C;
+    border: 3px solid white;
+    border-radius: 8px;
+}
+
+.button-container-form {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+  
+}
+
+
+
+
+form textarea {
+    padding: 5px;
+    background-color:#1a1a1a ;
+    border-radius: 4px;
+    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5);
+    width: 100%;
+    height: 80px;
+    color: white;
+    border: 1px solid #ccc;
+
 }
