--- a/styles/styles.css
+++ b/styles/styles.css
@@ -7,7 +7,7 @@
 }
 
 body {
-    background-color: #1a1a1a;
+    background: linear-gradient(180deg, #010208 16.39%, #010206 20.51%, #040008 24.79%, #010101 30.46%, #010101 34.11%, #010101 36.21%, #010101 100%);;
     color: white;
     font-family: 'Inter', sans-serif;
 }
@@ -30,6 +30,7 @@ body {
     text-decoration: none;
     color: white;
     display: inline-block;
+    border-bottom: 3px solid transparent;
     transition: transform 0.2s ease, color 0.2s ease;
 }
 
@@ -96,10 +97,6 @@ body {
 }
 
 
-.photo-container {
-    border: 5px solid gray;
-    border-radius: 6px;
-}
 
 
 .stack-container {
@@ -119,33 +116,46 @@ body {
 
 .project-section {
     padding-bottom: 180px;
+    border-bottom: none;
+}
+
+.project-container-images {
+
+    display: flex;
+    justify-content: space-around;
     border-bottom: 3px solid #ff6b6b;
-}
+    padding-bottom: 120px;
+    
+   
 
-
-
-.project-1 img {
-    object-fit: cover;
-    width: 300px;
-    height: 150px;
 
 }
 
 
-.project-3 img {
-    object-fit: cover;
-    width: 300px;
-    height: 150px;
+.project-1 {
+    box-shadow: 0 0 60px rgba(42, 193, 175, 0.35);
+    padding: 20px;
+
+ 
+}
+
+.project-2 {
+
+    box-shadow: 0 0 60px rgba(42, 193, 175, 0.35);
+    padding: 20px;
 
 }
 
 
-.project-2 img {
-    object-fit: cover;
-    width: 300px;
-    height: 150px;
+
+.project-3 {
+
+    box-shadow: 0 0 60px rgba(42, 193, 175, 0.35);
+    padding: 20px;
 
 }
+
+
 
 
 
@@ -163,67 +173,11 @@ body {
 
 
 
-.prohect-container-hover {
-    display: flex;
-    justify-content:space-around;
-    padding-top: 20px ;
-   
-}
-
-.prohect-container-hover h1{
-    font-size:40px;
-    font-weight:850;
-    color: #ff6b6b;
-}
-
-
-.project-1, .project-2, .project-3 {
-    line-height: 1.5;
-    border: 5px solid #ff6b6b;
-    border-radius: 8px;
-    padding: 40px;
-    text-align: center;
-    display: inline-block;
-    transition: transform 0.2s ease, color 0.2s ease;
-    background-color: rgba(255, 107, 107, 0.1);
-
-    
-
-}
-
-.project-1 a, .project-2 a, .project-3 a {
-    text-decoration: none;
-    list-style: none;
-    color: white;
-    border: 5px solid #ff6b6b;
-    font-weight: bold;
-    background-color: #ff6b6b;
-    padding: 10px;
-    border-radius: 8px;
-    font-size: 20px;
-    
-}
 
 
 
-
-
-.project-1:hover, .project-2:hover, .project-3:hover {
-    transform: scale(1.08);
-}
-
-.project-1 p, .project-2 p, .project-3 p {
-    font-size: 25px;
-    font-weight: bold;
-    padding-bottom: 15px;
-
-}
-
-
-
-.footer-contact {
-
-    margin-bottom: 150px;
+.footer-contact {   
+    margin-bottom: 60px;
 }
 
 
@@ -250,95 +204,16 @@ body {
 
 .footer-container a {
     text-decoration: none;
-    color: #F0E68C;
-}
-
-
-form {
-    width: 500px;
-    height: 510px;
-    padding: 5px;
-    background-color:#1a1a1a ;
-    border-radius: 10px;
-    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5);
-    border-radius: 5px solid #ff6b6b ;
-}
-
-.form-container h1{
-    text-align: center;
-    padding-bottom: 20px;
-    color: #F0E68C; 
-}
-
-
-.form-container {
-    border-top: 3px solid #ff6b6b;
-    padding-top: 20px;
-    margin: 30px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-
-} 
-
-.input-box {
-    padding: 10px;
-}
-
-form label {
-padding: 15px;
-font-size: 20px;
-
-}
-
-.input-box  label {
-    text-align: start;
-    display: block;
-    font-weight: bold;
-}
-   
-
-form input {
     color: white;
-    width: 100%;
-    padding:12px 12px;
-    background-color: #1a1a1a;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-}
-
-form button {
-
-    font-size: 25px;
-    font-weight: bold;
-    padding: 5px;
-    width: 150px;
-    background-color: #1a1a1a;
-    color: #F0E68C;
-    border: 3px solid white;
-    border-radius: 8px;
-}
-
-.button-container-form {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 10px;
-  
 }
 
 
 
 
-form textarea {
-    padding: 5px;
-    background-color:#1a1a1a ;
-    border-radius: 4px;
-    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5);
-    width: 100%;
-    height: 80px;
-    color: white;
-    border: 1px solid #ccc;
+.footer-container-hover {
+   display: flex;
+   justify-content: space-around;
+ 
+
 
 }
